--- a/student-store-api/package.json
+++ b/student-store-api/package.json
@@ -2,22 +2,25 @@
   "name": "student-store",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node ./src/server.js",
+    "start": "nodemon server.js",
     "seed": "node seed.js",
-    "dev": "node ./src/server.js"
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.16.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "pg": "^8.11.3"
+    "morgan": "^1.10.0",
+    "pg": "^8.12.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.4",
+    "prisma": "^5.16.0"
   }
 }
